Add price endpoint (#54)
* add min max price endpoint

* add route

* update api docs
